registro de usario finalizado - homepage iniciado

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     </script>
     <title>Gestión de tareas</title>
   </head>
-  <body class="bg-surface text-fg">
+  <body class="bg-surface-3 text-fg">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
